Added DbContext and repository implementations

--- a/InvoiceService.Infrastructure/InvoiceService.Infrastructure.csproj
+++ b/InvoiceService.Infrastructure/InvoiceService.Infrastructure.csproj
@@ -14,4 +14,12 @@
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\InvoiceService.Core\InvoiceService.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Messaging\" />
+  </ItemGroup>
+
 </Project>
