--- a/InvoiceService.Infrastructure/InvoiceService.Infrastructure.csproj
+++ b/InvoiceService.Infrastructure/InvoiceService.Infrastructure.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\InvoiceService.Core\InvoiceService.Core.csproj" />
+    <ProjectReference Include="..\InvoiceService.Core\InvoiceService.Core.csproj" />
   </ItemGroup>
 
 </Project>
