--- a/InvoiceService.Infrastructure/InvoiceService.Infrastructure.csproj
+++ b/InvoiceService.Infrastructure/InvoiceService.Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.1.0.23" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
     <PackageReference Include="Polly" Version="6.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="5.0.1" />
